Fixed bootstrap style issues because they had to change their primary grid system slightly enough to fck up the whole website. No worries, I got it covered. Also implemented a somewhat consistant color system through Sass. This commit message is getting too long.

--- a/assets/css/_custom.scss
+++ b/assets/css/_custom.scss
@@ -1,1 +1,5 @@
 //Bootstrap variable overrides should be placed in this file
+
+body a:hover {
+  text-decoration: none !important;
+}
